--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /TestScripting/.vs/TestScripting/v15
+/TestScripting/packages
+/TestScripting/SeleniumTestA/bin/Debug
+/TestScripting/SeleniumTestA/obj/Debug
