--- a/Alkosto/Pruebas Funcionales/AlkostoFunctionalTest/AlkostoFunctionalTest/AlkostoFunctionalTest.csproj
+++ b/Alkosto/Pruebas Funcionales/AlkostoFunctionalTest/AlkostoFunctionalTest/AlkostoFunctionalTest.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,6 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -60,6 +62,7 @@
     <Compile Include="TCAlkosto004Test.cs" />
     <Compile Include="TCAlkosto005Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilis.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Data\Data003.csv">
